# guitarpractice-club-api

./: .bandit  .env  .flake8  LICENSE  README.md  log.conf.json  main.py  pyproject.toml
.github/workflows/: ci.yaml
config/: __init__.py
models/: exercise.py
routers/: authentication.py  exercises.py
tests/: __init__.py  test_authenticate.py
