[tool.poetry]
name = "guitarpractice-club-api"
version = "0.1.0"
description = ""
authors = ["David Sere"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
uvicorn = "^0.11.8"
fastapi = "^0.61.1"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.6.0"
pytest = "^6.0.2"
flake8 = "^3.8.3"
yapf = "^0.30.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
